<resources>
    <string name="app_name">weatherapp</string>
    <string name="temp">00:00 C</string>
    <string name="sunny">SUNNY</string>
    <string name="max_temp">Max: 00:00</string>
    <string name="min_temp">Min: 00:00</string>
    <string name="day">Tuesday</string>
    <string name="date">25 January 2024</string>
    <string name="sunSetTime">00:00</string>
    <string name="sunsetText">sunset</string>
    <string name="sunRiseTime">00:00</string>
    <string name="sunriseText">sunrise</string>
    <string name="windSpeed">0.00 m/s</string>
    <string name="wind_speed_text">Wind Speed</string>
    <string name="condition">Condition</string>
    <string name="seaPressure">0000 hPa</string>
    <string name="sea">Sea</string>
    <string name="humidity">00%</string>
    <string name="humidity_text">humidity</string>
</resources>